# gscreen

./: .gitattributes  .gitignore  README.md  environment.yml  pyproject.toml
examples/dude-sahh/: README.md
examples/dude-sahh/inputs/: actives_final_corina_addchg.mol2
examples/dude-sahh/outputs/ganal/: ganal.json
examples/dude-sahh/outputs/gscreen/actives_final_corina_addchg/: gscreen_result.mol2
examples/dude-sahh/outputs/gscreen/actives_final_corina_addchg/split/part00/: gscreen_result.mol2
examples/dude-sahh/outputs/gscreen/actives_final_corina_addchg/split/part01/: gscreen_result.mol2
examples/dude-sahh/outputs/gscreen/actives_final_corina_addchg/split/part03/: gscreen_result.mol2
examples/dude-sahh/outputs/gscreen/actives_final_corina_addchg/split/part05/: gscreen_result.mol2
examples/dude-sahh/outputs/gscreen/actives_final_corina_addchg/split/part10/: gscreen_result.mol2
examples/dude-sahh/outputs/gscreen/actives_final_corina_addchg/split/part14/: gscreen_result.mol2
examples/dude-sahh/outputs/gscreen/actives_final_corina_addchg/split/part16/: gscreen_result.mol2
examples/dude-sahh/outputs/gscreen/actives_final_corina_addchg/split/part21/: gscreen_result.mol2
examples/dude-sahh/outputs/gscreen/actives_final_corina_addchg/split/part22/: gscreen_result.mol2
examples/dude-sahh/outputs/gscreen/actives_final_corina_addchg/split/part23/: gscreen_result.mol2
examples/dude-sahh/outputs/gscreen/actives_final_corina_addchg/split/part24/: gscreen_result.mol2
examples/dude-sahh/outputs/gscreen/actives_final_corina_addchg/split/part25/: gscreen_result.mol2
examples/dude-sahh/outputs/gscreen/actives_final_corina_addchg/split/part26/: gscreen_result.mol2
examples/dude-sahh/outputs/gscreen/actives_final_corina_addchg/split/part28/: gscreen_result.mol2
examples/dude-sahh/outputs/gscreen/actives_final_corina_addchg/split/querys/: actives_final_corina_addchg_part0.mol2  actives_final_corina_addchg_part1.mol2  actives_final_corina_addchg_part10.mol2  actives_final_corina_addchg_part11.mol2  actives_final_corina_addchg_part12.mol2  actives_final_corina_addchg_part13.mol2  actives_final_corina_addchg_part14.mol2  actives_final_corina_addchg_part15.mol2  actives_final_corina_addchg_part16.mol2  actives_final_corina_addchg_part17.mol2  actives_final_corina_addchg_part18.mol2  actives_final_corina_addchg_part19.mol2  actives_final_corina_addchg_part2.mol2  actives_final_corina_addchg_part20.mol2  actives_final_corina_addchg_part21.mol2  actives_final_corina_addchg_part22.mol2  actives_final_corina_addchg_part23.mol2  actives_final_corina_addchg_part24.mol2  actives_final_corina_addchg_part25.mol2  actives_final_corina_addchg_part26.mol2  actives_final_corina_addchg_part27.mol2  actives_final_corina_addchg_part28.mol2  actives_final_corina_addchg_part29.mol2  actives_final_corina_addchg_part3.mol2  actives_final_corina_addchg_part30.mol2  actives_final_corina_addchg_part31.mol2  actives_final_corina_addchg_part4.mol2  actives_final_corina_addchg_part5.mol2  actives_final_corina_addchg_part6.mol2  actives_final_corina_addchg_part7.mol2  actives_final_corina_addchg_part8.mol2  actives_final_corina_addchg_part9.mol2
examples/dude-sahh/outputs/gscreen/decoys_final_corina_addchg/split/part04/: gscreen_result.mol2
examples/dude-sahh/outputs/gscreen/decoys_final_corina_addchg/split/part05/: gscreen_result.mol2
examples/dude-sahh/outputs/gscreen/decoys_final_corina_addchg/split/part06/: gscreen_result.mol2
examples/dude-sahh/outputs/gscreen/decoys_final_corina_addchg/split/part07/: gscreen_result.mol2
examples/dude-sahh/outputs/gscreen/decoys_final_corina_addchg/split/part08/: gscreen_result.mol2
examples/dude-sahh/outputs/gscreen/decoys_final_corina_addchg/split/part10/: gscreen_result.mol2
examples/dude-sahh/outputs/gscreen/decoys_final_corina_addchg/split/part11/: gscreen_result.mol2
examples/dude-sahh/outputs/gscreen/decoys_final_corina_addchg/split/part13/: gscreen_result.mol2
examples/dude-sahh/outputs/gscreen/decoys_final_corina_addchg/split/part15/: gscreen_result.mol2
examples/dude-sahh/outputs/gscreen/decoys_final_corina_addchg/split/part17/: gscreen_result.mol2
examples/dude-sahh/outputs/gscreen/decoys_final_corina_addchg/split/part19/: gscreen_result.mol2
examples/dude-sahh/outputs/gscreen/decoys_final_corina_addchg/split/part20/: gscreen_result.mol2
examples/dude-sahh/outputs/gscreen/decoys_final_corina_addchg/split/part21/: gscreen_result.mol2
examples/dude-sahh/outputs/gscreen/decoys_final_corina_addchg/split/part22/: gscreen_result.mol2
examples/dude-sahh/outputs/gscreen/decoys_final_corina_addchg/split/part25/: gscreen_result.mol2
examples/dude-sahh/outputs/gscreen/decoys_final_corina_addchg/split/part27/: gscreen_result.mol2
examples/dude-sahh/outputs/gscreen/decoys_final_corina_addchg/split/part28/: gscreen_result.mol2
examples/dude-sahh/outputs/gscreen/decoys_final_corina_addchg/split/part29/: gscreen_result.mol2
examples/dude-sahh/outputs/gscreen/decoys_final_corina_addchg/split/part30/: gscreen_result.mol2
scripts/: alignment-dependency-analysis.py  cluster_ligands.py  crossval-analysis.py  extra-analysis.py  flexibility-analysis.py  inter-dataset-analysis.py  ligand-flexibility-metrics.py  memory-scaling-analysis.py  per-set-analysis.py  plot-roc-curves.py  select_random.py  select_random_crossval.py  shared_metrics.py  speed-analysis.py  tiebreaking-analysis.py  tiebreaking-demo.py
scripts/bench/: gscreen_bench.py  memory_scaling.py
src/gscreen/: __init__.py  pipeline.py  typing.py
src/gscreen/api/: __init__.py  json.py  serialize.py
src/gscreen/cli/: ganal.py  gscreen.py  gundock.py  utils.py
src/gscreen/io/: __init__.py  fastio.py  fmt.py  log.py  log.pyi
src/gscreen/pcdetect/: __init__.py  chemistry.py  geometry.py  pcfilter.py  pharmacophore.py  report.py  topology.py
src/gscreen/tools/: __init__.py  chimera.py  corina.py
src/gscreen/tools/align/: __init__.py  galign.py
src/gscreen/utils/: __init__.py  misc.py  pathops.py
(+230 files in other folders)
