[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "gscreen"
description = """
A Scalable Virtual Screening Pipeline with \
Flexible Structure Alignment and Pharmacophore Interaction Analysis"""
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Nuri Jung", email = "jnooree@snu.ac.kr" }]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/seoklab/gscreen"

[project.scripts]
ganal = "gscreen.cli.ganal:main"
gscreen = "gscreen.cli.gscreen:main"
gundock = "gscreen.cli.gundock:main"
gmolsplit = "gscreen.cli.utils:split_into"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_file = "src/gscreen/_version.py"

[tool.ruff]
line-length = 79

target-version = "py39"

src = ["src"]
extend-include = ["*.pyi", "*.ipynb"]
extend-exclude = [".github", ".vscode", "build", "dist", "*.pyc"]
extend-select = ["I"]
ignore = ["E4", "E74", "F403", "F405"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
no-lines-before = ["local-folder"]

[tool.mypy]
files = ["src/", "scripts/"]
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"

check_untyped_defs = true
disallow_any_explicit = true
disallow_any_generics = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

allow_redefinition = true
local_partial_types = true
disable_error_code = ["import-untyped", "no-redef"]

show_error_context = true
show_column_numbers = true

[tool.pyright]
include = ["src"]
pythonVersion = "3.9"
pythonPlatform = "Linux"

strictParameterNoneValue = false

reportGeneralTypeIssues = "information"
reportUnusedImport = "warning"
reportUnusedClass = "warning"
reportUnusedFunction = "warning"
reportUnusedVariable = "warning"
reportDuplicateImport = "warning"
reportWildcardImportFromLibrary = "none"
reportOptionalSubscript = "warning"
reportOptionalMemberAccess = "warning"
reportOptionalCall = "warning"
reportOptionalIterable = "warning"
reportOptionalContextManager = "warning"
reportOptionalOperand = "warning"
reportPrivateImportUsage = "none"
reportIncompatibleMethodOverride = "none"
reportIncompatibleVariableOverride = "warning"
reportInconsistentConstructor = "warning"
reportOverlappingOverload = "warning"
reportUninitializedInstanceVariable = "warning"
reportInvalidStringEscapeSequence = "error"
reportUnnecessaryIsInstance = "warning"
reportUnnecessaryCast = "warning"
reportUnnecessaryComparison = "warning"
reportUnnecessaryContains = "warning"
reportAssertAlwaysTrue = "warning"
reportSelfClsParameterName = "warning"
reportImplicitStringConcatenation = "information"
reportInvalidStubStatement = "warning"
reportIncompleteStub = "warning"
reportUnnecessaryTypeIgnoreComment = "none"
reportMatchNotExhaustive = "warning"
reportShadowedImports = "warning"
reportPossiblyUnboundVariable = "none"

# Covered by mypy
reportAssignmentType = "none"
reportAttributeAccessIssue = "none"
reportArgumentType = "none"
reportCallIssue = "none"
reportReturnType = "none"
