[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "gscreen"
description = """
A Scalable Virtual Screening Pipeline with \
Flexible Structure Alignment and Pharmacophore Interaction Analysis"""
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Nuri Jung", email = "jnooree@snu.ac.kr" }]
dynamic = ["version"]
dependencies = [
    "file-read-backwards~=3.1.0",
    "joblib>=1.4.2",
    "networkx~=3.2.1",
    "numpy<2.0",
    "openbabel-wheel~=3.1.1",
    "pandas~=2.2.3",
    "scikit-learn~=1.6.0",
    "scipy~=1.13.1",
    "tqdm>=4.67",
    "typer>=0.16",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.20",
    "ipykernel>=6.31.0",
    "joblib-stubs>=1.4.2.5.20240918",
    "matplotlib>=3.9.4",
    "mypy>=1.19.1",
    "pandas-stubs>=2.3.3.260113",
    "ruff>=0.15.10",
    "scikit-learn-stubs>=0.0.3",
    "scipy-stubs>=1.15.3.0",
    "seaborn>=0.13.2",
    "statsmodels~=0.14.4",
    "types-networkx>=3.6.1.20260408",
    "types-seaborn>=0.13.2.20260408",
    "types-tqdm>=4.67.3.20260205",
]

[project.urls]
repository = "https://github.com/seoklab/gscreen"

[project.scripts]
ganal = "gscreen.cli.ganal:main"
gscreen = "gscreen.cli.gscreen:main"
gundock = "gscreen.cli.gundock:main"
gmolsplit = "gscreen.cli.utils:split_into"

[tool.uv]
environments = ["sys_platform == 'linux'"]
constraint-dependencies = [
    "pygls<2.0", # vscode requires pygls<2.0
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_file = "src/gscreen/_version.py"

[tool.ruff]
line-length = 79

src = ["src", "scripts"]
extend-include = ["*.pyi", "*.ipynb"]
extend-exclude = [".github", ".vscode", "build", "dist", "*.pyc"]

[tool.ruff.lint]
extend-select = ["I"]
ignore = ["E4", "E74", "F403", "F405"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
no-lines-before = ["local-folder"]

[tool.mypy]
files = ["src/", "scripts/"]
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"

check_untyped_defs = true
disallow_any_explicit = true
disallow_any_generics = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

allow_redefinition = true
local_partial_types = true
disable_error_code = ["import-untyped", "no-redef"]

show_error_context = true
show_column_numbers = true

[tool.pyright]
include = ["src", "scripts"]
pythonVersion = "3.10"
pythonPlatform = "Linux"

strictParameterNoneValue = false

reportGeneralTypeIssues = "information"
reportUnusedImport = "warning"
reportUnusedClass = "warning"
reportUnusedFunction = "warning"
reportUnusedVariable = "warning"
reportDuplicateImport = "warning"
reportWildcardImportFromLibrary = "none"
reportOptionalSubscript = "warning"
reportOptionalMemberAccess = "warning"
reportOptionalCall = "warning"
reportOptionalIterable = "warning"
reportOptionalContextManager = "warning"
reportOptionalOperand = "warning"
reportPrivateImportUsage = "none"
reportIncompatibleMethodOverride = "none"
reportIncompatibleVariableOverride = "warning"
reportInconsistentConstructor = "warning"
reportOverlappingOverload = "warning"
reportUninitializedInstanceVariable = "warning"
reportInvalidStringEscapeSequence = "error"
reportUnnecessaryIsInstance = "warning"
reportUnnecessaryCast = "warning"
reportUnnecessaryComparison = "warning"
reportUnnecessaryContains = "warning"
reportAssertAlwaysTrue = "warning"
reportSelfClsParameterName = "warning"
reportImplicitStringConcatenation = "information"
reportInvalidStubStatement = "warning"
reportIncompleteStub = "warning"
reportUnnecessaryTypeIgnoreComment = "none"
reportMatchNotExhaustive = "warning"
reportShadowedImports = "warning"
reportPossiblyUnboundVariable = "none"

# Covered by mypy
reportAssignmentType = "none"
reportAttributeAccessIssue = "none"
reportArgumentType = "none"
reportCallIssue = "none"
reportReturnType = "none"
